# internal/storage/sqlserver/topic.go
@@ -2,9 +2,11 @@ package sqlserver
 
 import (
 	"context"
+	"database/sql"
 	"github.com/iamgafurov/journal/internal/dto"
 	"github.com/iamgafurov/journal/internal/models"
 	"github.com/iamgafurov/journal/internal/tools"
+	"log"
 	"strings"
 )
 
@@ -24,7 +26,7 @@ func (d *db) GetTopics(ctx context.Context, userCode, courseId int64) ([]models.
 				nkolchv
 			FROM tblvdpstkr
 			WHERE kst = $1 AND kvd = $2
-			ORDER BY cnzap desc;`
+			ORDER BY cnzap;`
 
 	row, err := d.pool.QueryContext(ctx, query, userCode, courseId)
 	if err != nil {
@@ -102,4 +104,60 @@ func (d *db) UpdateTopic(ctx context.Context, topic models.Topic, userCode int64
 		return dto.ErrNoRowsAffected
 	}
 	return nil
+}
+
+func (d *db) CreateTopic(ctx context.Context, topic models.Topic) (id int64, err error) {
+	query := `INSERT INTO tblvdpstkr(
+                kvd,
+                kst,
+                pnn,
+                chruchgod,
+                vchaccess,
+                chactive,       
+                dtactive,
+                cnzap,
+                dtzap,
+                isu_sot_id,
+            	ctema,
+				nkolch,
+				nkolchsem,
+				nkolchlab,
+				nkolchprak,
+				nkolchkmdro,
+				nkolchv) 
+			OUTPUT Inserted.kdn
+			VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11, $12, $13, $14, $15, $16, $17);`
+
+	err = d.pool.QueryRowContext(ctx, query,
+		topic.Kvd,
+		topic.Kst,
+		"",
+		topic.Chruchgod,
+		topic.VchAccess,
+		topic.ChActive,
+		topic.DtActive,
+		topic.Cnzap,
+		topic.Dtzap,
+		topic.IsuSotId,
+		topic.Tema,
+		topic.KolLek,
+		topic.KolSem,
+		topic.KolLab,
+		topic.KolPrak,
+		topic.KolKmd,
+		topic.KolObsh,
+	).Scan(&id)
+	log.Println(id, err)
+
+	return
+}
+
+func (d *db) GetCurrentCnzap(ctx context.Context, courseId int64) (cnzap string, err error) {
+	err = d.pool.QueryRowContext(ctx, `SELECT TOP 1 cnzap from tblvdpstkr WHERE kvd = $1 ORDER BY cnzap DESC`, courseId).Scan(&cnzap)
+	if err == sql.ErrNoRows {
+		return "0", nil
+	}
+
+	cnzap = strings.TrimSpace(cnzap)
+	return
 }
